# unopack

./: README.md
backend/: .env.example  .gitignore  Cargo.toml  Dockerfile
backend/src/: db.rs  main.rs  modrinth.rs  packer.rs
frontend/: index.html  package.json  pnpm-lock.yaml  prettier.config.cjs  tailwind.config.ts  tsconfig.json
frontend/scripts/: gen-st-gal-trans.ts
frontend/src/: App.tsx  features.ts  i18n.ts  images.ts  index.css  index.tsx  state.ts
frontend/src/components/: customModModal.tsx  featureCard.tsx  languageSwitcher.tsx  modal.tsx  startButton.tsx  translationCredits.tsx
frontend/src/locale/: az.ts  be.ts  cz.ts  en.ts  fi.ts  ru.ts  standardgalactic.ts  ua.ts
frontend/src/stages/: download.tsx  features.tsx  landing.tsx  resourcePacks.tsx
http503/: astro.config.mjs  package.json  pnpm-lock.yaml
http503/src/pages/: [...anything].astro
installer/: index.html  package.json  pnpm-lock.yaml  tailwind.config.ts
installer/src/: App.tsx  state.ts  styles.css
installer/src-tauri/: Cargo.toml  tauri.conf.json
installer/src-tauri/icons/: icon.icns
installer/src-tauri/src/: main.rs
installer/src/stages/: error.tsx  loading.tsx  start.tsx  success.tsx
