[package]
name = "installer"
version = "0.0.0"
description = "unopack installer"
authors = ["ronanru"]
license = "AGPL-3.0-only"
repository = ""
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[build-dependencies]
tauri-build = { version = "1.3", features = [] }

[dependencies]
tauri = { version = "1.3", features = ["dialog", "process-command-api"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
zip = "0.6.6"
tempfile = "3.6.0"
reqwest = { version = "0.11.18", features = ["json"] }
rand = "0.8.5"

[features]
# this feature is used for production builds or when `devPath` points to the filesystem
# DO NOT REMOVE!!
custom-protocol = ["tauri/custom-protocol"]
